--- a/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
+++ b/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <IncludeSymbols>false</IncludeSymbols>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
