--- a/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
+++ b/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
@@ -14,6 +14,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Authors>Audacia</Authors>
     <Description>Useful extensions to the xunit test framework</Description>
+    <Version>1.1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
