--- a/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
+++ b/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
@@ -2,7 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
     <IsPackable>true</IsPackable>
+	<PackageIcon>audacia-logo-circle-blue.png</PackageIcon>
+	<Author>Audacia</Author>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -13,12 +16,12 @@
     <WarningLevel>9999</WarningLevel>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Authors>Audacia</Authors>
-    <Description>Useful extensions to the xunit test framework</Description>
-    <Version>1.1.0.0</Version>
+    <Description>This repo is for potentially useful extensions to the xunit test framework</Description>
+    <Version>1.1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Audacia.CodeAnalysis" Version="1.1.22019.3">
+    <PackageReference Include="Audacia.CodeAnalysis" Version="1.5.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
