feat: update nullablility across projects #152521

--- a/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
+++ b/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
@@ -4,8 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
     <IsPackable>true</IsPackable>
-	<PackageIcon>audacia-logo-circle-blue.png</PackageIcon>
 	<Author>Audacia</Author>
+	<PackageIcon>audacia-logo-circle-blue.png</PackageIcon>
+	<Nullable>enable</Nullable>
+	<LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -15,9 +17,8 @@
     <WarningsAsErrors />
     <WarningLevel>9999</WarningLevel>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Authors>Audacia</Authors>
     <Description>This repo is for potentially useful extensions to the xunit test framework</Description>
-    <Version>1.1.0.1</Version>
+    <Version>1.2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
