--- a/tests/Audacia.XunitExtensions.Tests/Audacia.XunitExtensions.Tests.csproj
+++ b/tests/Audacia.XunitExtensions.Tests/Audacia.XunitExtensions.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 	<Author>Audacia</Author>
 	<Nullable>enable</Nullable>
 	<LangVersion>8.0</LangVersion>
