fix: correct icon name #184707

--- a/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
+++ b/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="package-icon.png">
+    <None Include="audacia-logo-circle-blue.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
