--- a/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
+++ b/src/Audacia.XunitExtensions/Audacia.XunitExtensions.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <IsPackable>true</IsPackable>
-	<Author>Audacia</Author>
-	<PackageIcon>audacia-logo-circle-blue.png</PackageIcon>
-	<Nullable>enable</Nullable>
-	<LangVersion>8.0</LangVersion>
+    <Author>Audacia</Author>
+    <PackageIcon>audacia-logo-circle-blue.png</PackageIcon>
+    <Nullable>enable</Nullable>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -20,6 +20,13 @@
     <Description>Useful extensions to the xunit test framework</Description>
     <Version>1.1.22028</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="audacia-logo-circle-blue.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Audacia.CodeAnalysis" Version="1.5.1">
