Feat: publish to public nuget #205388 (#5)
* feat: publish to public nuget #205388

* fix: skip tests for now

--- a/build.yaml
+++ b/build.yaml
@@ -13,12 +13,23 @@ resources:
       name: audaciaconsulting/Audacia.Build
 pool:
   vmImage: windows-latest
+variables:
+  - group: Code Signing
 
 stages:
 - stage: Stage_Build
   displayName: Build
   jobs:
-    - template: src/build/dotnet/jobs/nuget-package.job.yaml@templates
+    - template: src/build/dotnet/jobs/signed-nuget-package.job.yaml@templates
+      parameters:
+        trustedSigningEndpoint: $(TrustedSigningEndpoint)
+        trustedSigningAccount: $(TrustedSigningAccount)
+        trustedSigningCertificateProfile: $(TrustedSigningCertificateProfile)
+        directory: $(Build.SourcesDirectory)/src/Audacia.XunitExtensions
+        fileToSignPattern: 'Audacia.XunitExtensions.dll'
+        serviceConnection: 'Audacia Code Signing'
+        excludePaths: '*.Tests.csproj'
+        runTests: false
 
 - stage: Stage_Release
   displayName: Release
@@ -30,4 +41,4 @@ stages:
       eq(dependencies.Stage_Build.outputs['Job_Build.UpdateVersions.ShouldPublish'], true)
     )
   jobs:
-    - template: src/deployment/nuget/jobs/internal-public-nuget-package.job.yaml@templates
+    - template: src/deployment/nuget/jobs/public-nuget-package.job.yaml@templates
